--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <aspectj.version>1.9.19</aspectj.version>
         <cucumber.version>7.18.1</cucumber.version>
         <cucumber-jvm.version>7.18.1</cucumber-jvm.version>
+        <suiteXmlFiles>src/test/resources/testrunners/chrometestng.xml</suiteXmlFiles>
+
     </properties>
 
     <dependencies>
@@ -127,11 +129,11 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>io.qameta.allure</groupId>
-                <artifactId>allure-maven</artifactId>
-                <version>2.11.2</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>io.qameta.allure</groupId>-->
+<!--                <artifactId>allure-maven</artifactId>-->
+<!--                <version>2.11.2</version>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -139,13 +141,13 @@
                 <version>3.5.3</version>
 
                 <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>4</threadCount>
+                    <parallel>tests</parallel>
                     <forkCount>3</forkCount>
-                    <reuseForks>true</reuseForks>
+                    <reuseForks>false</reuseForks>
 
                     <suiteXmlFiles>
-                             <suiteXmlFile>src/test/resources/testrunner/testng.xml</suiteXmlFile>
+<!--                        <suiteXmlFile>src/test/resources/testrunners/testng.xml</suiteXmlFile>-->
+                        <suiteXmlFile>${suiteXmlFiles}</suiteXmlFile>
                     </suiteXmlFiles>
 
                     <argLine>
