--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -3,7 +3,6 @@ rootLogger.level = debug
 rootLogger.appenderRef.stdout.ref = StandardConsole
 rootLogger.appenderRef.file.ref = LogFile
 
-
 # Direct log messages to the console
 appender.console.type = Console
 appender.console.name = StandardConsole
@@ -13,7 +12,7 @@ appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} [%t] %level %logger::%
 # Direct log messages to a log file
 appender.file.type = File
 appender.file.name = LogFile
-appender.file.fileName = logs/automation-${date:yyyy-MM-dd-HH-mm-ss}.log
+appender.file.fileName = target/logs/automation-${date:yyyy-MM-dd-HH-mm-ss}.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} [%t] %level %logger::%M::%L %m %n
 appender.file.append = true
