--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <aspectj.version>1.9.19</aspectj.version>
         <cucumber.version>7.18.1</cucumber.version>
         <cucumber-jvm.version>7.18.1</cucumber-jvm.version>
-        <suiteXmlFiles>src/test/resources/testrunners/chrometestng.xml</suiteXmlFiles>
+<!--        <suiteXmlFiles>src/test/resources/testrunners/chrometestng.xml</suiteXmlFiles>-->
 
     </properties>
 
@@ -141,14 +141,21 @@
                 <version>3.5.3</version>
 
                 <configuration>
-                    <parallel>tests</parallel>
-                    <forkCount>3</forkCount>
-                    <reuseForks>false</reuseForks>
+<!--                    <includes>**/runner/TestRunnerChrome.java</includes>-->
+<!--                    <parallel>methods</parallel>-->
+<!--                    <threadCount>2</threadCount>-->
 
                     <suiteXmlFiles>
-<!--                        <suiteXmlFile>src/test/resources/testrunners/testng.xml</suiteXmlFile>-->
+<!--                    <suiteXmlFile>src/test/resources/testrunners/testng.xml</suiteXmlFile>-->
                         <suiteXmlFile>${suiteXmlFiles}</suiteXmlFile>
                     </suiteXmlFiles>
+
+<!--                    <properties>-->
+<!--                        <property>-->
+<!--                            <name>dataproviderthreadcount</name>-->
+<!--                            <value>3</value>-->
+<!--                        </property>-->
+<!--                    </properties>-->
 
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
@@ -177,7 +184,7 @@
 
                 <executions>
                     <execution>
-                        <id>make-assembly</id> <!-- this is used forinheritancemerges -->
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                         <phase>package</phase> <!-- bind to the packaging phase -->
                         <goals>
                             <goal>single</goal>
